--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.scroll-overflow::-webkit-scrollbar-track
+/* .scroll-overflow::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	background-color: #F5F5F5;
@@ -17,7 +17,7 @@
 .scroll-overflow::-webkit-scrollbar-thumb
 {
 	border: 1px solid #4a4949;
-}
+} */
 
 .background{
     background-image: none;
