--- a/src/index.css
+++ b/src/index.css
@@ -2,23 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .scroll-overflow::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
+html{
+    background-color: rgba(0, 0, 0, 0.799);
 }
-
-.scroll-overflow::-webkit-scrollbar
-{
-	width: 5px;
-	background-color: #F5F5F5;
-}
-
-.scroll-overflow::-webkit-scrollbar-thumb
-{
-	border: 1px solid #4a4949;
-} */
-
 .background{
     background-image: none;
 }
