Fixed Margin and Added Gesture

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background: url(/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    backdrop-filter: blur(5px);
+}
+
 .fade-out{
     animation: closecard .6s forwards;
 }
