--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body{
     background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
     height: 100%;
 }
 
