--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(89, 89, 89, 0.518);
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb
+{
+	background-color: #494949a4;
+    border-radius: 50px;
+	border: 2px solid #55555572;
+}
+
 body{
     background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    height: 100%;
+    backdrop-filter: blur(5px);
 }
 
 .fade-out{
@@ -16,18 +34,8 @@ body{
 .open{
     animation: open .3s forwards;
 }
-@keyframes closecard {
-    0% { opacity: 1; display: flex; }
-    100% { opacity: 0; display: none; }
-}
-@keyframes open {
-    0% { opacity: 0;  }
-    100% { opacity: 1; display: flex;}
 
-}
-.font-green{
-    color: rgb(37, 118, 37);
-}
+
 .fade-up{
     animation: fade-up .5s ease-in-out;
     overflow: hidden;
@@ -47,7 +55,17 @@ body{
     animation: right-transition .6s ease-in-out;
 }
 .show{
-    animation: show .8s;
+    animation: show .8s ease-in-out;
+}
+
+@keyframes closecard {
+    0% { opacity: 1; display: flex; }
+    100% { opacity: 0; display: none; }
+}
+@keyframes open {
+    0% { opacity: 0;  }
+    100% { opacity: 1; display: flex;}
+
 }
 @keyframes show {
     0%{opacity: 0%;}
@@ -66,18 +84,10 @@ body{
 
 
 @keyframes bounce {
-    50%{
-        transform: translateY(-20px);
-    }
-    100%{
-        transform: translateY(0);
-    }
+    50%{transform: translateY(-20px);}
+    100%{transform: translateY(0);}
 }
 @media screen and (min-width: 470px) {
-    @keyframes opencard {
-        from{width: 0px;}
-        to{width: 80%;}
-    }
     @keyframes up {
         0%{
             transform: translateY(30%);
