--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 ::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(89, 89, 89, 0.518);
-	background-color: #F5F5F5;
+	-webkit-box-shadow: inset 0 0 6px rgba(89, 89, 89, 0.132);
+	background-color: #f5f5f570;
 }
 
 ::-webkit-scrollbar
-{
+{   
 	width: 5px;
-	background-color: #F5F5F5;
+	background-color: #f5f5f56b;
 }
 ::-webkit-scrollbar-thumb
 {
@@ -49,10 +48,10 @@ body{
     overflow: hidden;
 }
 .left-transition{
-    animation: left-transition .6s ease-in-out;
+    animation: left-transition .9s ease;
 }
 .right-transition{
-    animation: right-transition .6s ease-in-out;
+    animation: right-transition .9s ease-in-out;
 }
 .show{
     animation: show .8s ease-in-out;
